fix: removed z-index from top-bar

--- a/Tests/Blazorise.Demo/content/demo.css
+++ b/Tests/Blazorise.Demo/content/demo.css
@@ -20,7 +20,6 @@ html, body {
     align-items: center;
     top: 0;
     position: sticky;
-    z-index: 999;
 }
 
 .app-content {
